versions/3.3/zh/asset/model/mesh.md
# 模型资源

目前，Creator 支持 **FBX** 和 **glTF** 两种格式的模型文件。

- FBX：支持 FBX 2020 及更早的文件格式。
- glTF：支持 glTF 2.0 及更早的文件格式，详情可参考 [glTF 模型](./glTF.md)。

关于如何从第三方工具导出这两种模型文件，请参考 [导入从 DCC 工具导出的模型](./dcc-export-mesh.md)。

## 模型导入

从外部导入编辑器中后，在 **资源管理器** 中可得到对应的模型资源文件，其目录结构如下：（以 glTF 文件为例，fbx 文件相同）

- 无动画的模型文件结构如下：

    ![mesh list](mesh/mesh_list.png)

- 包含动画的模型文件结构如下：

    ![mesh list1](mesh/mesh_list_1.png)

    - `.material` — 材质文件
    - `.mesh` — 模型文件
    - `.texture` — 模型贴图文件
    - `.animation` — 模型动画文件
    - `.skeleton` — 模型骨骼文件
    - `.prefab` — 导入时自动生成的预制件

### Mesh 文件

Mesh 文件中存储了模型的顶点、索引、纹理坐标等数据。在 **层级管理器** 中选中 Mesh 文件后，在 **属性检查器** 便可以看到 Mesh 的一些信息以及它的预览效果。

![Mesh Asset](mesh/mesh-asset-preview.png)

| 属性 | 功能说明 |
| :-- | :-- |
| Vertices | 模型的顶点数 |
| Triangles | 模型的三角形数 |
| UV | 模型的纹理坐标索引 |
| MinPos | 模型的最小坐标值 |
| MaxPos | 模型的最大坐标值 |

## 模型使用

将模型文件导入后，直接将模型文件的根节点从 **资源管理器** 拖拽到 **层级管理器** 中想要放置的节点下，即可完成节点创建，此时模型就成功在场景中创建了。<br>
或者也可以将模型文件的节点展开，选中模型文件节点下的 `.prefab` 文件，从 **资源管理器** 拖拽到 **层级管理器** 中同样能够完成创建。

![mesh use](mesh/mesh_use.gif)

## 模型资源属性

当在 **资源管理器** 中选中模型资源文件时（ `.fbx` 或 `.gltf`），在 **属性检查器** 中就可以直接设置模型资源的相关属性。

### Model 模块

![mesh model](mesh/mesh_model.jpg)

| 属性 | 说明 |
| :--- | :--- |
| 法线（Normals） | 导入法线信息，包括以下四种选项：<br>1. 可选（Optional）：只导入模型文件中包含的法线，适用于非常清楚自己模型数据的情况。<br>2. 排除（Exclude）：不导入法线。<br>3. 仅在必要时重新计算（Required）：导入模型文件中的法线，若模型文件中不包含法线则重新计算，适用于大部分情况。模型数据本身没问题的话还是推荐使用该项，没有额外的处理。<br>4. 重新计算（Recalculate）：无论模型文件中是否包含法线，都直接重新计算并导入。选择该项会增加计算量，但是可以消除模型原始数据法线没有归一化带来的后续问题。 |
| 切线（Tangents） | 导入切线信息，包括 Optional、Exclude、Require、Recalculate 四种选项，选项功能可参考 **法线** 的说明，二者相差不大。 |
| 跳过验证（Skip Validation）| 是否跳过对模型文件的标准检测。 |
| 是否禁用 Mesh 拆分（Disable mesh split） | 为了解决实时骨骼动画系统下 uniform vector 数量限制问题，目前在资源导入期会根据骨骼数量做拆分，这会对其他系统也产生影响。如果确定不会使用实时计算模式（对应 SkeletalAnimation 组件的 useBakedAnimation 选项未勾选时），可以勾选此项以提升性能。但注意改变此选项会影响生成的 prefab 内容，需要对应更新场景中的引用。后续重构会移除此流程。 |

### Animation 模块

![mesh animation](mesh/mesh_animation.jpg)

上方的动画文件表格是当前模型下的所有动画资源信息，下方是当前选中动画的具体帧数信息的编辑区域，可以在此处更改动画名称或进行简单的动画裁剪。

- 点击图上红框内的 **+** 按钮可以添加动画文件，添加的新文件默认拷贝一份完整的 clip 数据，可以在下方的 `Start`、`End` 输入框中输入帧数来裁剪动画。(目前暂时不支持拖拽裁剪动画)

- 点击图上红框内的 **-** 按钮可以删除当前选中的动画文件

### Material 模块

![mesh material](mesh/mesh_material.jpg)

- `DumpMaterial`：当对模型文件自带的材质不满意想要修改时，需开启此选项，将文件结构目录下的材质文件 dump 出模型资源中，此时就可以进行材质的调整修改了
- `Dumper Directory`：这里可以指定或者查看 dump 出来的目录位置
